# map_segmentor

./: Cargo.toml
scripts/: run_display.sh
src/: main.rs  map_render.rs
src/model/: geometry.rs
