[package]
name = "segment_image"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
galileo = { version = "0.1.1", git = "https://github.com/Maximkaaa/galileo" }
galileo-egui = { git = "https://github.com/Maximkaaa/galileo", features = ["init"] }
gdal = "0.18.0"
geo = "0.30.0"
geozero = "0.14.0"
image = "0.25.6"
ndarray = "0.15.6"
ort = "1.16.3"
parking_lot = "0.12.4"
serde_json = "1.0.140"
shapefile = "0.7.0"
tokio = { version = "1.45.1", features = ["full"] }
